[package]
name = "audiotag-ci"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.11", features = ["derive"] }
id3 = "1.14.0"
log = "0.4.22"
mp4ameta = "0.11.0"
serde = { version = "1.0.205", features = ["derive"] }
simple_logger = "5.0.0"
toml = "0.8.19"
dirs = "5.0.1"
